k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-city-api
  labels:
    app: test-city-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-city-api
  template:
    metadata:
      labels:
        app: test-city-api
    spec:
      containers:
        - name: test-city-api
          image: registry.kontur.host/ke-forms/test-analytics/api:${IMAGE_TAG}
          ports:
            - containerPort: 8124
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-city-crawler
  labels:
    app: test-city-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-city-crawler
  template:
    metadata:
      labels:
        app: test-city-crawler
    spec:
      containers:
        - name: test-city-crawler
          image: registry.kontur.host/ke-forms/test-analytics/crawler:${IMAGE_TAG}
          ports:
            - containerPort: 8125
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-city-front
  labels:
    app: test-city-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-city-front
  template:
    metadata:
      labels:
        app: test-city-front
    spec:
      containers:
        - name: test-city-front
          image: registry.kontur.host/ke-forms/test-analytics/front:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-city-worker
  labels:
    app: test-city-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-city-worker
  template:
    metadata:
      labels:
        app: test-city-worker
    spec:
      containers:
        - name: test-city-worker
          image: registry.kontur.host/ke-forms/test-analytics/worker:${IMAGE_TAG}
          resources:
            requests:
              cpu: "500m"
              memory: "1536Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: test-city-front-service
spec:
  selector:
    app: test-city-front
  ports:
    - protocol: TCP
      port: 30110
      targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: test-city-api-service
spec:
  selector:
    app: test-city-api
  ports:
    - protocol: TCP
      port: 30111
      targetPort: 8124
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: test-city-redirect-from-singular-service
  annotations:
    konturSdName: test-analytics
spec:
  selector:
    app: test-city-redirect-from-singular
  ports:
    - protocol: TCP
      port: 30114
      targetPort: 8122
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-city-front-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: testcity.kube.testkontur.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-city-front-service
                port:
                  number: 30110
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: test-city-api-service
                port:
                  number: 30111
